Add support for multiple product models and simplify mapping of translated fields

--- a/Distancify.LitiumAddOns.OData/Distancify.LitiumAddOns.OData.csproj
+++ b/Distancify.LitiumAddOns.OData/Distancify.LitiumAddOns.OData.csproj
@@ -390,6 +390,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ControllerConvention.cs" />
     <Compile Include="Litium\ApplicationExtensionBuilder.cs" />
     <Compile Include="Controllers\LitiumODataController.cs" />
     <Compile Include="Controllers\ODataProductsController.cs" />
