--- a/Distancify.LitiumAddOns.OData/Distancify.LitiumAddOns.OData.csproj
+++ b/Distancify.LitiumAddOns.OData/Distancify.LitiumAddOns.OData.csproj
@@ -390,6 +390,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Security\BasicAuthenticationAttribute.cs" />
     <Compile Include="ControllerConvention.cs" />
     <Compile Include="Litium\ApplicationExtensionBuilder.cs" />
     <Compile Include="Controllers\LitiumODataController.cs" />
@@ -402,6 +403,7 @@
     <Compile Include="Litium\WebApiSetup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlyFieldFrameworkModel.cs" />
+    <Compile Include="Security\NeedsProductsContentAccessAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
