Add support for mapping fields with a context culture

--- a/Distancify.LitiumAddOns.OData/Distancify.LitiumAddOns.OData.csproj
+++ b/Distancify.LitiumAddOns.OData/Distancify.LitiumAddOns.OData.csproj
@@ -391,6 +391,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoMapperExtensions\PriceMappings.cs" />
+    <Compile Include="AutoMapperExtensions\Extensions.cs" />
     <Compile Include="Security\BasicAuthenticationAttribute.cs" />
     <Compile Include="ControllerConvention.cs" />
     <Compile Include="Litium\ApplicationExtensionBuilder.cs" />
