Add mapping for IntOption

--- a/Distancify.LitiumAddOns.OData/Distancify.LitiumAddOns.OData.csproj
+++ b/Distancify.LitiumAddOns.OData/Distancify.LitiumAddOns.OData.csproj
@@ -392,6 +392,7 @@
   <ItemGroup>
     <Compile Include="AutoMapperExtensions\PriceMappings.cs" />
     <Compile Include="AutoMapperExtensions\Extensions.cs" />
+    <Compile Include="AutoMapperExtensions\IntOptionMappings.cs" />
     <Compile Include="Security\BasicAuthenticationAttribute.cs" />
     <Compile Include="ControllerConvention.cs" />
     <Compile Include="Litium\ApplicationExtensionBuilder.cs" />
