Fix scenario when mapping to missing fields and values for IntOption and TextOption

--- a/Distancify.LitiumAddOns.OData/Distancify.LitiumAddOns.OData.csproj
+++ b/Distancify.LitiumAddOns.OData/Distancify.LitiumAddOns.OData.csproj
@@ -410,6 +410,7 @@
     <Compile Include="AutoMapperExtensions\TextOptionMappings.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Distancify.LitiumAddOns.OData.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
