--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,9 @@ steps:
   displayName: 'Restore NuGet packages'
   inputs:
     restoreSolution: '$(solution)'
+    feedsToUse: config
+    nugetConfigPath: NuGet.config
+    externalFeedCredentials: Litium
 
 - task: PowerShell@2
   displayName: 'SetBuildVariables.ps1'
